--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,7 @@
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "8.38.0",
+    "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.5.0",
@@ -62,4 +62,5 @@
     }
   }
 }
+
 
