--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^6.26.2",
+    "lucide-react": "^0.463.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
