backen para envio de contraseña por gmail

--- a/backend/.env
+++ b/backend/.env
@@ -52,14 +52,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com      # El host SMTP de tu proveedor de correo
+MAIL_PORT=587                      # 587 para TLS, 465 para SSL
+MAIL_USERNAME=cochatech.bo@gmail.com
+MAIL_PASSWORD=ardnrilyerzhahoj
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="cochatech.bo@gmail.com"
+MAIL_FROM_NAME="Oh!SanSi"
+
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
